Add html, css,js,img

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="./css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="./css/styles.css" rel="stylesheet" type="text/css">
     <title<brikicho</title>
   </head>
   <body>
@@ -11,9 +11,9 @@
 
       <p>Let's play peek-a-boo. Click here to see the surprise!</p>
 
-      <img src="img/walrus.jpg">
+      <img src="./img/walrus.jpeg">
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+    <script src="./js/jquery-3.6.0.js"></script>
   </body>
 </html>
