--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="./js/jquery-3.6.0.js"></script>
+    <script src="./js/script.js"></script>
+    
   </body>
 </html>
